--- a/assets/css/md-small.css
+++ b/assets/css/md-small.css
@@ -7,6 +7,13 @@
         font-size: 14px;
     }
 
+    .nama{
+        font-size: 16px;
+    }
+
+    .nrp{
+        font-size: 14px;
+    }
 
     /* forgot */
     .set-card {
