--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -13,56 +13,56 @@ body {
 }
 
 h1 {
-    font-size: 24px;
+    font-size: 1.5em;
     font-weight: bold;
     line-height: 1.2;
     margin: 0 0 20px;
 }
 
 h2 {
-    font-size: 22px;
+    font-size: 1.375em;
     font-weight: bold;
     line-height: 1.3;
     margin: 0 0 18px;
 }
 
 h3 {
-    font-size: 20px;
+    font-size: 1.25em;
     font-weight: bold;
     line-height: 1.4;
     margin: 0 0 16px;
 }
 
 h4 {
-    font-size: 18px;
+    font-size: 1.125em;
     font-weight: bold;
     line-height: 1.5;
     margin: 0 0 14px;
 }
 
 h5 {
-    font-size: 16px;
+    font-size: 1em;
     font-weight: bold;
     line-height: 1.6;
     margin: 0 0 12px;
 }
 
 h6 {
-    font-size: 14px;
+    font-size: 0.875em;
     font-weight: bold;
     line-height: 1.7;
     margin: 0 0 10px;
 }
 
 p {
-    font-size: 16px;
+    font-size: 1em;
     font-weight: normal;
     line-height: 1.6;
     margin: 0 0 15px;
 }
 
 a {
-    font-size: 12px;
+    font-size: 0.75em;
     text-decoration: none;
     color: var(--blue);
 }
@@ -72,22 +72,10 @@ a {
 }
 
 .button {
-    font-size: 12px;
+    font-size: 0.75em;
     color: var(--yellow) !important;
     background-color: var(--purple) !important;
-    font-weight: 600;
-}
-
-.v-expansion-panel-title__icon {
-    position: absolute;
-    display: inline-flex;
-    margin-bottom: -4px;
-    margin-top: -4px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    user-select: none;
-    margin-inline-start: auto;
-    left: 0;
+    font-weight: bold!important;
 }
 
 .color-purple {
@@ -97,7 +85,7 @@ a {
 
 
 .font-li {
-    font-size: 12px;
+    font-size: 0.75em;
     font-weight: bold;  
     list-style-type: circle!important;
 }
@@ -107,19 +95,3 @@ a {
     flex-direction: column;
     justify-content: flex-start;
 }
-
-
-/* .v-expansion-panel-header.v-expansion-panel-header--active .mdi-chevron-down {
-    display: none !important;
-  }
-  
-  .v-expansion-panel-header .mdi-chevron-right {
-    display: none !important;
-  }
-  
-  .v-expansion-panel-header.v-expansion-panel-header--active .mdi-chevron-right {
-    display: inline-block !important;
-  } */
-
-  .mdi-chevron-right::before {
-    content: "\F0142";}
