--- a/assets/css/md-large.css
+++ b/assets/css/md-large.css
@@ -1,15 +1,15 @@
 /* desktop */
 @media (min-width:1024px) {
     h1 {
-        font-size: 24px;
+        font-size: 1.5em;
     }
 
     .nama{
-        font-size: 24px;
+        font-size: 1.5em;
     }
 
     .nrp{
-        font-size: 22px;
+        font-size: 1.375em;
     }
 
     /* forgot */
@@ -30,20 +30,20 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding-top: 80px;
+        padding-top: 65px;
     }
 
     .container-forgot {
         display: flex;
         justify-content: center;
         height: 100vh;
-        margin-top: 75px;
+        margin-top: 100px;
     }
 
     .container {
         display: flex;
         justify-content: center;
-        margin-top: 55px;
+        margin-top: 70px;
     }
 
     /* login */
@@ -57,11 +57,11 @@
     .label-login {
         width: 500px;
         height: 41px;
-        font-size: 12px;
+        font-size: 0.75em;
     }
 
     .btn-login {
-        font-size: 18px !important;
+        font-size: 1.125em !important;
         font-weight: bold !important;
         color: var(--yellow) !important;
         background-color: var(--purple) !important;
@@ -88,7 +88,7 @@
     }
 
     a {
-        font-size: 16px;
+        font-size: 1em;
         text-decoration: none;
     }
 
@@ -104,18 +104,13 @@
     }
 
     .font-li {
-        font-size: 18px;
+        font-size: 1em;
         font-weight: bold;
     }
 
     h6 {
-        font-size: 18px;
+        font-size: 1.125em;
     }
-
-    /* h4 {
-        font-size: 22px;
-    } */
-
 
     /* kerja kuis */
     .kuis-container {
@@ -130,5 +125,23 @@
 
     .navigasi-container {
         grid-column: 2 / 3;
+    }
+
+    .footer{
+        max-height: 120px;
+        margin-left: 180px;
+    }
+
+    .swal2-show {
+        width: 500px!important;
+        height: auto;
+    }
+
+    .ukuran-font{
+        font-size: 1em!important;
+    }
+
+    .v-container {
+        max-width: 100%!important;
     }
 }
