--- a/assets/css/md-medium.css
+++ b/assets/css/md-medium.css
@@ -1,15 +1,15 @@
 /* tablet */
 @media (min-width:560px) and (max-width:1024px) {
     h1 {
-        font-size: 20px;
+        font-size: 1.25em;
     }
 
     .nama {
-        font-size: 20px;
+        font-size: 1.25em;
     }
 
     .nrp {
-        font-size: 18px;
+        font-size: 1.125em;
     }
 
     /* forgot */
@@ -22,15 +22,13 @@
     }
 
     .set-image {
-        width: 100px;
-        height: 100px;
+        width: 120px;
     }
 
     .logo {
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding-top: 40px;
     }
 
     .container {
@@ -38,8 +36,6 @@
         justify-content: center;
         margin-top: 75px;
     }
-
-
 
     /* login */
     .card-login {
@@ -55,7 +51,7 @@
     }
 
     .btn-login {
-        font-size: 18px !important;
+        font-size: 1.125em !important;
         font-weight: bold !important;
         color: var(--yellow) !important;
         background-color: var(--purple) !important;
@@ -70,7 +66,7 @@
         display: flex;
         justify-content: center;
         padding: 20px;
-        margin-top: 100px;
+        margin-top: 120px;
     }
 
     .set-foto {
@@ -95,12 +91,12 @@
     }
 
     .font-li {
-        font-size: 16px;
+        font-size: 1em;
         font-weight: bold;
     }
 
     a {
-        font-size: 16px;
+        font-size: 1em;
         text-decoration: none;
     }
 
@@ -116,11 +112,11 @@
     }
 
     h6 {
-        font-size: 16px;
+        font-size: 1em;
     }
 
     h4 {
-        font-size: 20px;
+        font-size: 1.125em;
     }
 
     .navigasi {
@@ -132,6 +128,11 @@
     }
 
     h2 {
-        font-size: 18px;
+        font-size: 1.125em;
+    }
+
+    .footer{
+        max-height: 120px;
+        margin-left: 180px;
     }
 }
